@@ -197,11 +197,10 @@ EXTERN char preload_yorn;
 EXTERN Item *item;                             /* current during parse */
 EXTERN Item *cur_sel, *cur_button;             /* current during parse */
 EXTERN Display *dpy;
+EXTERN Graphics *G;
 EXTERN int fd_x;                  /* fd for X connection */
 EXTERN Window root, ref;
-extern Colormap PictureCMap;
 EXTERN int screen;
-EXTERN int scr_depth;
 
 
 /* Font/color stuff 
