@@ -20,6 +20,7 @@
 	* FvwmCpp/*:			ditto
 	* FvwmM4/*:			ditto
 	* FvwmBanner/FvwmBanner.c: FvwmBanner now shares fvwm's visual type
+	* FvwmForm/FvwmForm.c:		ditto
 
 1999-06-24  Dominik Vogt  <dominik_vogt@gmx.de>
 
